--- a/doubleColorBall/index.html
+++ b/doubleColorBall/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="field">
                 <div class="control">
-                    <button class="button is-link" @click="getDoubleColorBall">取号</button>
+                    <button class="button is-link" @click="getDoubleColorBall">随机取号</button>
                 </div>
             </div>
         </div>
@@ -274,6 +274,9 @@
             <p>
                 <br />
             </p>
+        </div>
+        <div class="content has-text-centered">
+            <span class=" subtitle is-6">本网站仅供学习交流，请勿用于商业用途</span>
         </div>
     </footer>
 </body>
