--- a/doubleColorBall/index.html
+++ b/doubleColorBall/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>双色球</title>
-    <link rel="stylesheet" href="css/bulma.css">
-    <script src="js/vue.js"></script>
+    <link rel="stylesheet" href="css/bulma.min.css">
+    <script src="js/vue.min.js"></script>
     <script src="js/index.js"></script>
 </head>
 
