--- a/doubleColorBall/index.html
+++ b/doubleColorBall/index.html
@@ -63,89 +63,7 @@
             </div>
         </div>
     </section>
-    <script>
-        new Vue({
-            el: "#app",
-            data() {
-                return {
-                    // 已生成的双色球组
-                    doubleColorBall: [],
-                    // 双色球数字汇总
-                    ballNumberCollectForRed: [],
-                    ballNumberCollectForBlue: [],
-                    arr: [],
-                }
-            },
-            methods: {
-                getDoubleColorBall() {
-                    this.doubleColorBall.push(getDoubleColorBall());
-                    this.ballNumberCollect();
-                },
-                ballNumberCollect() {
-                    const NumberCollectForRed = [];
-                    const NumberCollectForBlue = [];
-                    for (const item of this.doubleColorBall) {
-                        for (const it of item) {
-                            const index = item.lastIndexOf(it);
-                            if (index < item.length - 1) {
-                                if (NumberCollectForRed.indexOf(it) == -1) {
-                                    NumberCollectForRed.push(it)
-                                }
-                            } else {
-                                if (NumberCollectForBlue.indexOf(it) == -1) {
-                                    NumberCollectForBlue.push(it)
-                                }
-                            }
-                        }
-                    }
-                    this.ballNumberCollectForRed = NumberCollectForRed.sort((a,b) => a-b);
-                    this.ballNumberCollectForBlue = NumberCollectForBlue.sort((a,b) => a-b);
-                    // this.collectfilter(NumberCollectForRed, NumberCollectForBlue);
-                },
-                // n个数字组成m个的组合
-                collectfilter(redArray, blueArray) {
-                    console.time('collectfilter')
-                    let n = 0;
-                    const collect = [];
-                    for (const item1 of redArray) {
-                        for (const item2 of redArray) {
-                            for (const item3 of redArray) {
-                                for (const item4 of redArray) {
-                                    for (const item5 of redArray) {
-                                        for (const item6 of redArray) {
-                                            const arr = [item1, item2, item3, item4, item5, item6]
-                                            if(!this.isRepead(arr)){
-                                                n++;
-                                                console.time('join'+n)
-                                                const str = arr.sort((a,b) => a-b).join('-');
-                                                console.timeEnd('join'+n)
-                                                if(collect.indexOf(str) == -1){
-                                                    collect.push(str);
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                    console.timeEnd('collectfilter')
-                    console.log(collect);
-                    
-                },
-                // 判断是否有重复
-                isRepead(array){
-                    for (let i = 0; i < array.length; i++) {
-                        const e = array[i];
-                        if(array.lastIndexOf(e) !== i){
-                            return true;
-                        }
-                    }
-                    return false;
-                }
-            }
-        })
-    </script>
+    <script src="js/index.js"></script>
 
     <footer class="footer">
         <div class="content">
