--- a/map/index.html
+++ b/map/index.html
@@ -1,90 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <title>Map</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+    <title>浏览器精确定位</title>
+    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
     <style>
         html,
         body,
         #container {
-            width: 100%;
             height: 100%;
         }
 
-        html,
-        body {
-            padding: 0;
-            margin: 0;
+        .info {
+            width: 26rem;
         }
     </style>
-</head>
 
 <body>
-    <div id="container"></div>
-    <script type="text/javascript"
-        src="https://webapi.amap.com/maps?v=1.4.15&key=76fc44e4bfc3fb5317c4b475ff562ab0"></script>
-    <script>
+    <div id='container'></div>
+    <div class="info">
+        <h4 id='status'></h4>
+        <hr>
+        <p id='result'></p>
+        <hr>
+        <p>由于众多浏览器已不再支持非安全域的定位请求，为保位成功率和精度，请升级您的站点到HTTPS。</p>
+    </div>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=76fc44e4bfc3fb5317c4b475ff562ab0"></script>
+    <script type="text/javascript">
         var map = new AMap.Map('container', {
-            zoom: 11,//级别
-            // viewMode: '3D',//使用3D视图
-            // resizeEnable: true
+            resizeEnable: true
         });
-
         AMap.plugin('AMap.Geolocation', function () {
             var geolocation = new AMap.Geolocation({
-                // 是否使用高精度定位，默认：true
-                enableHighAccuracy: true,
-                // 设置定位超时时间，默认：无穷大
-                timeout: 10000,
-                // 定位按钮的停靠位置的偏移量，默认：Pixel(10, 20)
-                buttonOffset: new AMap.Pixel(10, 20),
-                //  定位成功后调整地图视野范围使定位位置及精度范围视野内可见，默认：false
-                zoomToAccuracy: true,
-                //  定位按钮的排放位置,  RB表示右下
-                buttonPosition: 'RB'
-            })
+                enableHighAccuracy: true,//是否使用高精度定位，默认:true
+                timeout: 10000,          //超过10秒后停止定位，默认：5s
+                buttonPosition: 'RB',    //定位按钮的停靠位置
+                buttonOffset: new AMap.Pixel(10, 20),//定位按钮与设置的停靠位置的偏移量，默认：Pixel(10, 20)
+                zoomToAccuracy: true,   //定位成功后是否自动调整地图视野到定位点
 
-            geolocation.getCurrentPosition()
-            AMap.event.addListener(geolocation, 'complete', onComplete)
-            AMap.event.addListener(geolocation, 'error', onError)
-
-            function onComplete(data) {
-                // data是具体的定位信息
-                console.log('onComplete', data);
-            }
-
-            function onError(data) {
-                console.log('onError', data);
-                // 定位出错
-            }
-        })
-
-        // 同时引入工具条插件，比例尺插件和鹰眼插件
-        AMap.plugin([
-            'AMap.ToolBar',
-            'AMap.Scale',
-            'AMap.OverView',
-            'AMap.MapType',
-            'AMap.Geolocation',
-        ], function () {
-            // 在图面添加工具条控件，工具条控件集成了缩放、平移、定位等功能按钮在内的组合控件
-            map.addControl(new AMap.ToolBar());
-
-            // 在图面添加比例尺控件，展示地图在当前层级和纬度下的比例尺
-            map.addControl(new AMap.Scale());
-
-            // 在图面添加鹰眼控件，在地图右下角显示地图的缩略图
-            map.addControl(new AMap.OverView({ isOpen: true }));
-
-            // 在图面添加类别切换控件，实现默认图层与卫星图、实施交通图层之间切换的控制
-            map.addControl(new AMap.MapType());
-
-            // 在图面添加定位控件，用来获取和展示用户主机所在的经纬度位置
-            map.addControl(new AMap.Geolocation());
+            });
+            map.addControl(geolocation);
+            geolocation.getCurrentPosition(function (status, result) {
+                if (status == 'complete') {
+                    onComplete(result)
+                } else {
+                    onError(result)
+                }
+            });
         });
+        //解析定位结果
+        function onComplete(data) {
+            document.getElementById('status').innerHTML = '定位成功'
+            var str = [];
+            str.push('定位结果：' + data.position);
+            str.push('定位类别：' + data.location_type);
+            if (data.accuracy) {
+                str.push('精度：' + data.accuracy + ' 米');
+            }//如为IP精确定位结果则没有精度信息
+            str.push('是否经过偏移：' + (data.isConverted ? '是' : '否'));
+            document.getElementById('result').innerHTML = str.join('<br>');
+        }
+        //解析定位错误信息
+        function onError(data) {
+            document.getElementById('status').innerHTML = '定位失败'
+            document.getElementById('result').innerHTML = '失败原因排查信息:' + data.message;
+        }
     </script>
 </body>
 
