--- a/map/index.html
+++ b/map/index.html
@@ -21,13 +21,13 @@
 
 <body>
     <div id='container'></div>
-    <div class="info">
+    <!-- <div class="info">
         <h4 id='status'></h4>
         <hr>
         <p id='result'></p>
         <hr>
         <p>由于众多浏览器已不再支持非安全域的定位请求，为保位成功率和精度，请升级您的站点到HTTPS。</p>
-    </div>
+    </div> -->
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=76fc44e4bfc3fb5317c4b475ff562ab0"></script>
     <script type="text/javascript">
         var map = new AMap.Map('container', {
