--- a/map/index.html
+++ b/map/index.html
@@ -41,7 +41,7 @@
                 showButton: false,
                 // buttonPosition: 'RB',    //定位按钮的停靠位置
                 buttonOffset: new AMap.Pixel(10, 20),//定位按钮与设置的停靠位置的偏移量，默认：Pixel(10, 20)
-                zoomToAccuracy: true,   //定位成功后是否自动调整地图视野到定位点
+                zoomToAccuracy: false,   //定位成功后是否自动调整地图视野到定位点
 
             });
             map.addControl(geolocation);
