更新页面资源

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-</head>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>NgProject</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
 <body>
-  <script>
-    location.href = '/home/'
-  </script>
-</body>
-</html>
+  <app-root></app-root>
+<script src="runtime.d161848f2c9cbcd8dea3.js" defer></script><script src="polyfills.5bad3294cf0377b1652c.js" defer></script><script src="main.b62fc33da69e32103fb1.js" defer></script>
+
+</body></html>
